--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "start:docker": "./scripts/start-docker.sh",
     "stop:docker": "./scripts/stop-docker.sh",
     "lint": "eslint \"src/**\"",
+    "lint:staged": "lint-staged",
     "lint:fix": "eslint \"src/**\" --fix",
-    "clean": "rm -rf node_modules dist"
+    "clean": "rm -rf node_modules dist",
+    "prepare": "husky install"
   },
   "dependencies": {
     "grommet": "^2.20.0",
@@ -50,6 +52,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.3",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
@@ -64,6 +68,14 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2",
     "webpack-merge": "^5.8.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint:staged"
+    }
+  },
+  "lint-staged": {
+    "*.tsx": "eslint"
   },
   "importSort": {
     ".ts, .tsx": {
