--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "autoprefixer": "^10.4.1",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.6.0",
+    "css-modules-typescript-loader": "^4.0.1",
     "cssnano": "^5.0.14",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
