--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,3 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "plugin:react/recommended",
-    "airbnb",
-    "airbnb-typescript",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "project": "./tsconfig.json"
-  },
-  "plugins": ["react", "@typescript-eslint"],
-  "rules": {
-    "comma-dangle": ["error", "always-multiline"],
-    "max-len": ["error", { "code": 120 }],
-    "react/jsx-props-no-spreading": ["off"],
-    "@typescript-eslint/type-annotation-spacing": "error"
-  }
+	"extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"]
 }
