--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/animejs": "^3.1.12",
+    "animejs": "^3.2.2",
     "grommet": "^2.20.0",
     "grommet-icons": "^4.7.0",
     "polished": "^4.1.3",
@@ -25,23 +27,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.16.7",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/register": "^7.16.7",
     "@hot-loader/react-dom": "^17.0.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "autoprefixer": "^10.4.1",
-    "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
     "css-modules-typescript-loader": "^4.0.1",
