--- a/package.json
+++ b/package.json
@@ -1,84 +1,55 @@
 {
-  "name": "react-typescript-grommet-skeleton",
-  "version": "1.0.0",
-  "license": "MIT",
+  "name": "companly",
+  "version": "1.0.1",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --node-env development",
-    "dev:bundleanalyzer": "yarn dev --env addons=bundleanalyzer",
-    "prebuild": "rimraf dist",
-    "build": "webpack --node-env production",
-    "build:bundleanalyzer": "yarn build --env addons=bundleanalyzer",
-    "build:docker": "./scripts/build-docker.sh",
-    "start:docker": "./scripts/start-docker.sh",
-    "stop:docker": "./scripts/stop-docker.sh",
-    "lint": "eslint \"src/**\"",
-    "lint:staged": "lint-staged",
-    "lint:fix": "eslint \"src/**\" --fix",
-    "clean": "rm -rf node_modules dist",
-    "prepare": "husky install"
+    "start": "react-scripts start"
   },
   "dependencies": {
-    "@types/animejs": "^3.1.12",
     "animejs": "^3.2.2",
-    "grommet": "^2.20.0",
-    "grommet-icons": "^4.7.0",
-    "polished": "^4.1.3",
-    "prop-types": "^15.8.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.2.1"
+    "create-react-app": "^5.0.1",
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.3.1",
+    "grommet": "^2.34.2",
+    "grommet-icons": "^4.12.0",
+    "handlebars": "^4.7.8",
+    "openai": "^4.23.0",
+    "point-of-view": "^6.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
+    "react-scripts": "^5.0.1",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^17.0.2",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
-    "autoprefixer": "^10.4.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.6.0",
-    "css-modules-typescript-loader": "^4.0.1",
-    "cssnano": "^5.0.14",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "html-webpack-plugin": "^5.5.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.3",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.5",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.1.0",
-    "react-is": "^17.0.2",
-    "rimraf": "^3.0.2",
-    "style-loader": "^3.3.1",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2",
-    "webpack-merge": "^5.8.0"
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@types/animejs": "^3.1.12",
+    "@types/node": "^17.0.21",
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.0.9",
+    "styled-components": "^5.1.1"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint:staged"
-    }
+  "engines": {
+    "node": "14.x"
   },
-  "lint-staged": {
-    "*.tsx": "eslint"
+  "repository": {
+    "url": "https://glitch.com/edit/#!/companly-api"
   },
-  "importSort": {
-    ".ts, .tsx": {
-      "parser": "typescript",
-      "style": "eslint",
-      "options": {}
-    }
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch"
+  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
