--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.1",
   "main": "src/index.js",
   "scripts": {
+    "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "start": "react-scripts start"
   },
   "dependencies": {
     "animejs": "^3.2.2",
-    "create-react-app": "^5.0.1",
     "concurrently": "^8.2.2",
+    "create-react-app": "^5.0.1",
     "dotenv": "^16.3.1",
     "grommet": "^2.34.2",
     "grommet-icons": "^4.12.0",
@@ -17,9 +20,9 @@
     "point-of-view": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.0",
-    "react-scripts": "^5.0.1",
-    "react-query": "^3.39.3"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
@@ -27,6 +30,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.0.9",
+    "gh-pages": "^6.1.1",
     "styled-components": "^5.1.1"
   },
   "engines": {
