--- a/package.json
+++ b/package.json
@@ -1,40 +1,34 @@
 {
   "name": "companly",
   "version": "1.0.1",
-  "homepage": "https://giovanibee.github.io/companly",
+  "homepage": ".",
+  "type": "module",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "vite build --base=./",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build",
-    "start": "react-scripts start"
+    "start": "vite",
+    "serve": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "animejs": "^3.2.2",
-    "concurrently": "^8.2.2",
-    "create-react-app": "^5.0.1",
     "dotenv": "^16.3.1",
     "grommet": "^2.34.2",
     "grommet-icons": "^4.12.0",
-    "handlebars": "^4.7.8",
-    "openai": "^4.23.0",
-    "point-of-view": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.21.0",
-    "react-scripts": "^5.0.1"
+    "vite": "^5.0.10"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@types/animejs": "^3.1.12",
-    "@types/node": "^17.0.21",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.0.9",
     "gh-pages": "^6.1.1",
     "styled-components": "^5.1.1"
-  },
-  "engines": {
-    "node": "14.x"
   },
   "keywords": [
     "node",
@@ -42,6 +36,9 @@
     "openai",
     "companly"
   ],
+  "engines": {
+    "node": ">=16.8.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
