--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": ".",
   "type": "module",
   "scripts": {
-    "build": "vite build --base=./",
+    "build": "vite build",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build",
     "start": "vite",
